# ai_error_log_parser

./: .env  Makefile  SYSTEM_GUIDE.md  main.py  pyproject.toml  requirements.txt  test_ollama.py  vector_store.py
admin/: dashboard.py
app/: main.py
app/application/nodes/: analysis_nodes.py
app/application/usecase/: analyze_log.py  analyze_log_state.py
app/controller/factory/: analyze_log_factory.py
app/controller/router/: analysis.py
app/controller/schemas/: analysis.py
app/domain/entity/: analysis.py
app/domain/repository/: analysis_engine.py  job_metadata_repository.py  vector_store.py
app/domain/service/: log_cleaner.py  log_preprocessor.py  regex_classifier.py
app/infrastructure/job_meta/: http_gateway.py  mock_repo.py
app/infrastructure/llm/: gemini_engine.py
app/infrastructure/vector_db/: faiss_store.py
bm25s_index/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  metadata.json  params.index.json  vocab.index.json
chroma_db/: chroma.sqlite3
data/: error_definitions.json  metadata.pkl  processed_patterns.csv  raw_logs.csv
data/raw/: logs_batch_1.csv  logs_batch_10.csv  logs_batch_2.csv  logs_batch_3.csv  logs_batch_4.csv  logs_batch_5.csv  logs_batch_6.csv  logs_batch_7.csv  logs_batch_8.csv  logs_batch_9.csv
docs/: SETUP.md  domain_knowledge.md
scripts/: batch_process.py  index_knowledge.py
